--- a/Online Shop/MojePorudzbine.html
+++ b/Online Shop/MojePorudzbine.html
@@ -1,300 +1,25 @@
 ﻿<!DOCTYPE html>
-<html data-bs-theme="light">
+<html data-bs-theme="light" lang="sr">
 <head>
+    <title>Moje Porudžbine - Shopy</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>Moje Porudžbine - Shopy</title>
     <link rel="stylesheet" href="Content/bootstrap.min.css">
+    <link href="Content/shopy.css" rel="stylesheet" />
     <script src="Scripts/jquery-3.7.0.min.js"></script>
+    <script src="Scripts/load-optimizer.js"></script>
     <script src="Scripts/bootstrap.min.js"></script>
     <script src="Scripts/bootstrap.bundle.min.js"></script>
     <script src="Scripts/modernizr-2.8.3.js"></script>
-    <style>
-        .navbar .login-btn {
-            position: absolute;
-            top: 7px;
-            right: 95px;
-        }
-
-        .navbar .profil-btn {
-            position: absolute;
-            top: 10px;
-            right: 35px;
-        }
-
-        @media (max-width: 767px) {
-            .navbar .login-btn {
-                right: 75px;
-            }
-        }
-
-        .navbar .register-btn {
-            position: absolute;
-            top: 7px;
-            right: 15px;
-        }
-
-        @media (max-width: 767px) {
-            .navbar .register-btn {
-                right: 175px;
-            }
-        }
-    </style>
+    <script src="Scripts/api/auth/auth-base.js"></script>
+    <script src="Scripts/api/orders/orders-by-users.js"></script>
+    <script src="Scripts/loader-finisher.js"></script>
     <script>
-        // ako je ulogovan, prebaci ga na index - slucaj da ide na back opciju
-        $.ajax({
-            url: "/api/auth/Ulogovan",
-            type: "GET",
-            async: false,
-            cache: false,
-            dataType: "json",
-            contentType: "application/json; charset=utf-8",
-            success: function (response) {
-                if (response != null) {
-                    if (JSON.parse(response).Kod !== 0) // korisnik je ulogovan, ne moze da se registruje
-                    {
-                        window.location.href = "Index.html";
-                    }
-                }
-            }
-        });
-
-        // ako je ulogovan, prebaci prikazi meni u zavisnoti od uloge
-        $.ajax({
-            url: "/api/auth/AuthKorisnik",
-            type: "GET",
-            async: false,
-            cache: false,
-            dataType: "json",
-            contentType: "application/json; charset=utf-8",
-            success: function (response) {
-                var data = JSON.parse(response);
-                if (data.KorisnickoIme !== "") {
-                    // prikazi podatke i promeni meni
-                    // sakri dugmice za login i register
-                    $(function () {
-                        $("#pl").remove();
-
-                        // prikazi meni za nalog
-                        $('#poruka').text("Dobrodošli nazad, " + data.KorisnickoIme);
-
-                        // Prikazi samo dugmice vezane za korisnika koji ima datu ulogu
-                        var uloga = data.Uloga;
-
-                        if (uloga !== 0) {
-                            // nije pitanju kupac - povratak na pocetnu stranicu
-                            window.location.href = "MojProfil.html";
-                        }
-                    });
-                }
-                else {
-                    $(function () {
-                        // korisnik nije ulogovan - prikazi login i register
-                        $("#pl").show();
-
-                        // sakri meni za nalog
-                        $('#profil').addClass('d-none');
-                    });
-                }
-            }
-        });
-
-        // get metoda za dobijanje listi svih proizvoda za korisnika
-        $.ajax({
-            url: "/api/orders/MojePorudzbine",
-            type: "GET",
-            async: false,
-            cache: false,
-            dataType: "json",
-            contentType: "application/json; charset=utf-8",
-            success: function (response) {
-                var data = JSON.parse(response);
-                if (data.length > 0) {
-                    $(function () {
-                        // popuni tabelu
-                        $("#nema").addClass('d-none');
-
-                        $.each(data, function (key, k) {
-                            // dodavanje reda po red
-                            var kupac_dodaj_naruci = "";
-
-                            //if (k.Status)
-                            //    kupac_dodaj_naruci = '<a href="Proizvod.html?id=' + k.Id + '" class="btn btn-dark">Pogledajte proizvod</a>';
-                            //else
-                            //    kupac_dodaj_naruci = '<a href="#" class="btn btn-outline-danger disabled">Proizvod nije dostupan</a>';
-
-                            var status = "";
-                            var akcijaPrispeca = "";
-                            var ostaviRecenziju = "";
-                            var izmeniRecenziju = "";
-                            var obrisiRecenziju = "";
-
-                            if (k.Status === 0) {
-                                // aktivna
-                                status = '<span class="h5 card-title text-primary fw-semibold justify-content-end">AKTIVNA</span>';
-
-                                // aktivne mogu preci u izvrsene
-                                akcijaPrispeca = '<a href="OznaciPrispece.html?id=' + k.Id + '" class="btn btn-dark">Označite kao prispelu</a>';
-                                ostaviRecenziju = '<a href="#" class="btn btn-outline-primary disabled">Čeka se prispeće porudžbine...</a>';
-                            }
-                            else if (k.Status === 1) {
-                                // izvrsena
-                                status = '<span class="h5 card-title text-success fw-semibold justify-content-end">IZVRŠENA</span>';
-                                akcijaPrispeca = '<a href="#" class="btn btn-outline-dark disabled">Porudžbina obrađena</a>';
-
-                                // provera da li porudzbina ako je izvrsena ima recenziju, ako ima, kupac ima mogucnost
-                                // da recenziju izmeni ili obrise
-                                // obrisi korisnika po id
-
-                                $.ajax({
-                                    url: "/api/reviews/PostojiRecenzija",
-                                    type: "POST",
-                                    data: JSON.stringify({
-                                        id: k.Id
-                                    }),
-                                    async: false,
-                                    cache: false,
-                                    dataType: "json",
-                                    contentType: "application/json; charset=utf-8",
-                                    success: function (response) {
-                                        var data = JSON.parse(response);
-
-                                        if (data.Kod === 0) {
-                                            // postoji i ceka se na odobrenje, kupac je moze izmeniti
-                                            ostaviRecenziju = "";
-                                            izmeniRecenziju = '<a href="IzmeniRecenziju.html?id=' + k.Id + '" class="btn btn-outline-success">Izmenite recenziju</a>';
-                                            obrisiRecenziju = '<a href="ObrisiRecenziju.html?id=' + k.Id + '" class="btn btn-outline-danger">Obrišite recenziju</a>';
-                                        }
-                                        else if (data.Kod === 5) { // recenzija ne postoji uopste, tek se treba kreirati
-                                            ostaviRecenziju = '<a href="OstaviRecenziju.html?id=' + k.Id + '" class="btn btn-outline-primary">Ostavite recenziju</a>';
-                                            izmeniRecenziju = "";
-                                            obrisiRecenziju = "";
-                                        }
-                                        else if (data.Kod === 1) {
-                                            // odobrena je, nema dalje izmene
-                                            ostaviRecenziju = '<a href="#' + k.Id + '" class="btn btn-outline-success disabled">Recenzija odobrena</a>';
-                                            izmeniRecenziju = "";
-                                            obrisiRecenziju = "";
-                                        }
-                                        else if (data.Kod === 2) {
-                                            // odbijena je, nema dalje izmene
-                                            ostaviRecenziju = '<a href="#' + k.Id + '" class="btn btn-outline-danger disabled">Recenzija odbijena</a>';
-                                            izmeniRecenziju = "";
-                                            obrisiRecenziju = "";
-                                        }
-                                    }
-                                });
-                            }
-                            else {
-                                // otkazana
-                                status = '<span class="h5 card-title text-danger fw-semibold justify-content-end">OTKAZANA</span>';
-                                akcijaPrispeca = '<a href="#" class="btn btn-outline-danger disabled">Porudžbina otkazana</a>';
-                                ostaviRecenziju = '<a href="#" class="btn btn-outline-danger disabled">Ostavljanje recenzije nije moguće</a>';
-                            }
-
-                            $("#proizvodi").append(
-                                '<div class="card mb-4 border-success">' +
-                                '<div class="card-body">' +
-                                '<div class="row justify-content-between">' +
-                                '<div class="col-2">' +
-                                '<img alt="proizvod" class="card-img-top rounded-circle" width="150" height="150" src="/Uploads/' + k.Proizvod.Slika + '" />' +
-                                '</div>' +
-                                '<div class="col-10">' +
-                                '<div class="d-flex justify-content-between">' +
-                                '<span class="h5 card-title justify-content-start">' + k.Proizvod.Naziv + '</span>' +
-                                status +
-                                '</div>' +
-                                '<h6 class="card-subtitle mb-2 text-muted">Ukupno: ' + (parseFloat(k.Proizvod.Cena) * parseFloat(k.Kolicina)) + ' RSD</h6>' +
-                                '<p class="card-text">' + k.Kolicina + '</p>' +
-                                kupac_dodaj_naruci + akcijaPrispeca + "&emsp;" + ostaviRecenziju + izmeniRecenziju + "&emsp;" + obrisiRecenziju +
-                                '</div>' +
-                                '</div>' +
-                                '</div>' +
-                                '</div>');
-                        });
-                    });
-
-                    return false;
-                }
-                else {
-                    // nema jos uvek nije proizvod
-                    $("#nema").removeClass("d-none");
-
-                    return false;
-                }
-            }
-        });
-
-        // Odjava korisnika
-        jQuery(function () {
-            $("#divgreske").addClass('d-none');
-
-            // proveri da li je na stranicu vraceno sa Brisanja ili izmene
-            let searchParams = new URLSearchParams(window.location.search)
-            if (searchParams.has('msg')) {
-                // ima msg kao url parametar prikazi primljenu poruku
-                $("#divgreske").removeClass('d-none');
-                $("#greske").text(searchParams.get('msg'));
-            }
-
-            $("#odjava").on('click', function () {
-                // ajax poziv ka api-ju za vrsenje registracije
-                $.ajax({
-                    url: "/api/auth/Odjava",
-                    type: "POST",
-                    data: {},
-                    async: false,
-                    cache: false,
-                    dataType: "json",
-                    contentType: "application/json; charset=utf-8",
-                    success: function (response) {
-                        if (response != null) {
-                            if (JSON.parse(response).Kod === 0) // korisnik se odjavio uspesno
-                            {
-                                window.location.href = "Index.html";
-                                return false;
-                            }
-                        }
-                    }
-                });
-            });
-        });
+        
     </script>
 </head>
-<body>
-    <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark">
-        <div class="container">
-            <a href="/" class="navbar-brand">Shopy</a>
-            <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" title="Toggle navigation" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse d-sm-inline-flex justify-content-between">
-                <ul class="navbar-nav flex-grow-1">
-                    <li><a href="/" class="nav-link">Početna stranica</a></li>
-                    <li id="pl">
-                        <a href="Registracija.html" type="submit" id="registracija" class="btn btn-outline-light navbar-btn login-btn">Registracija</a>
-                        <a href="Prijava.html" type="submit" id="prijava" class="btn btn-outline-light navbar-btn register-btn">Prijava</a>
-                    </li>
-                    <li id="profil">
-                        <div class="btn-group profil-btn">
-                            <button type="button" class="btn btn-outline-light dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-                                <span id="poruka"></span>
-                            </button>
-                            <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="MojProfil.html" id="mojprofil">Moj profil</a></li>
-                                <li><a class="dropdown-item" href="IzmenaLozinke.html" id="izmenalozinke">Izmena lozinke</a></li>
-                                <li>
-                                    <hr class="dropdown-divider">
-                                </li>
-                                <li><a class="dropdown-item text-danger" id="odjava" href="#">Odjava sa platforme</a></li>
-                            </ul>
-                        </div>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
+<body class="d-none bsp">
+    <div id="nm"></div>
     <div class="container body-content mt-4 mb-5">
         <main>
             <div class="container">
