--- a/Online Shop/MojiProizvodi.html
+++ b/Online Shop/MojiProizvodi.html
@@ -1,274 +1,22 @@
 ﻿<!DOCTYPE html>
-<html data-bs-theme="light">
+<html data-bs-theme="light" lang="sr">
 <head>
+    <title>Moji Proizvodi - Shopy</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>Moji Proizvodi - Shopy</title>
     <link rel="stylesheet" href="Content/bootstrap.min.css">
+    <link href="Content/shopy.css" rel="stylesheet" />
     <script src="Scripts/jquery-3.7.0.min.js"></script>
+    <script src="Scripts/load-optimizer.js"></script>
     <script src="Scripts/bootstrap.min.js"></script>
     <script src="Scripts/bootstrap.bundle.min.js"></script>
     <script src="Scripts/modernizr-2.8.3.js"></script>
-    <style>
-        .navbar .login-btn {
-            position: absolute;
-            top: 7px;
-            right: 95px;
-        }
-
-        .navbar .profil-btn {
-            position: absolute;
-            top: 10px;
-            right: 35px;
-        }
-
-        @media (max-width: 767px) {
-            .navbar .login-btn {
-                right: 75px;
-            }
-        }
-
-        .navbar .register-btn {
-            position: absolute;
-            top: 7px;
-            right: 15px;
-        }
-
-        @media (max-width: 767px) {
-            .navbar .register-btn {
-                right: 175px;
-            }
-        }
-    </style>
-    <script>
-        // ako je ulogovan, prebaci ga na index - slucaj da ide na back opciju
-        $.ajax({
-            url: "/api/auth/Ulogovan",
-            type: "GET",
-            async: false,
-            cache: false,
-            dataType: "json",
-            contentType: "application/json; charset=utf-8",
-            success: function (response) {
-                if (response != null) {
-                    if (JSON.parse(response).Kod !== 0) // korisnik je ulogovan, ne moze da se registruje
-                    {
-                        window.location.href = "Index.html";
-                    }
-                }
-            }
-        });
-
-        // ako je ulogovan, prebaci prikazi meni u zavisnoti od uloge
-        $.ajax({
-            url: "/api/auth/AuthKorisnik",
-            type: "GET",
-            async: false,
-            cache: false,
-            dataType: "json",
-            contentType: "application/json; charset=utf-8",
-            success: function (response) {
-                var data = JSON.parse(response);
-                if (data.KorisnickoIme !== "") {
-                    // prikazi podatke i promeni meni
-                    // sakri dugmice za login i register
-                    $(function () {
-                        $("#pl").remove();
-
-                        // prikazi meni za nalog
-                        $('#poruka').text("Dobrodošli nazad, " + data.KorisnickoIme);
-
-                        // Prikazi samo dugmice vezane za korisnika koji ima datu ulogu
-                        var uloga = data.Uloga;
-
-                        if (uloga !== 1) {
-                            // nije pitanju prodavac - povratak na pocetnu stranicu
-                            window.location.href = "MojProfil.html";
-                        }
-                    });
-                }
-                else {
-                    $(function () {
-                        // korisnik nije ulogovan - prikazi login i register
-                        $("#pl").show();
-
-                        // sakri meni za nalog
-                        $('#profil').addClass('d-none');
-                    });
-                }
-            }
-        });
-
-        // get metoda za dobijanje listi svih proizvoda za korisnika
-        $.ajax({
-            url: "/api/products/ListaProizvoda",
-            type: "GET",
-            async: false,
-            cache: false,
-            dataType: "json",
-            contentType: "application/json; charset=utf-8",
-            success: function (response) {
-                var data = JSON.parse(response);
-
-                if (data.length > 0) {
-                    $(function () {
-                        // popuni tabelu
-                        $.each(data, function (key, k) {
-                            // dodavanje reda po red
-                            $("#proizvodi > tbody").append('<tr><td class="align-middle">' + k.Naziv + '</td>' +
-                                '<td><img alt="proizvod" width="80" height="80" src="/Uploads/' + k.Slika + '" /></td>' +
-                                '<td class="align-middle">' + k.Kolicina + '</td>' +
-                                '<td class="align-middle">' + k.Cena + '&nbsp;RSD</td>' +
-                                '<td class="align-middle">' + k.Opis.substring(0, 20) + '</td>' +
-                                '<td class="align-middle">' + new Date(k.DatumPostavljanjaProizvoda).toLocaleDateString("en-GB") + '</td>' +
-                                '<td class="align-middle">' + k.Grad.substring(0, 20) + '</td>' +
-                                '<td class="align-middle"><b>' + (k.Status ? "NA&nbsp;STANJU" : "NEDOSTUPAN") + '</b></td>' +
-                                '<td class="align-middle"><div class="align-middle justify-content-center">' +
-                                '&emsp;<a class="btn btn-dark" href="IzmenaProizvoda.html?id=' + k.Id + '">Izmena</a>&emsp;' +
-                                '<a class="btn btn-danger" href="BrisanjeProizvoda.html?id=' + k.Id + '">Brisanje</a></div></td>' +
-                                '</tr>');
-                        });
-                    });
-                }
-            }
-        });
-
-        // Odjava korisnika
-        jQuery(function () {
-            $("#divgreske").addClass('d-none');
-
-            // proveri da li je na stranicu vraceno sa Brisanja ili izmene
-            let searchParams = new URLSearchParams(window.location.search)
-            if (searchParams.has('msg')) {
-                // ima msg kao url parametar prikazi primljenu poruku
-                $("#divgreske").removeClass('d-none');
-                $("#greske").text(searchParams.get('msg'));
-            }
-
-            $("#odjava").on('click', function () {
-                // ajax poziv ka api-ju za vrsenje registracije
-                $.ajax({
-                    url: "/api/auth/Odjava",
-                    type: "POST",
-                    data: {},
-                    async: false,
-                    cache: false,
-                    dataType: "json",
-                    contentType: "application/json; charset=utf-8",
-                    success: function (response) {
-                        if (response != null) {
-                            if (JSON.parse(response).Kod === 0) // korisnik se odjavio uspesno
-                            {
-                                window.location.href = "Index.html";
-                                return false;
-                            }
-                        }
-                    }
-                });
-            });
-
-            // dugme pretraga
-            $("#dostupni, #sort").on('change', function () {
-                // isprazni redove
-                $('#proizvodi tbody').empty();
-                $("#divgreske").addClass('d-none');
-
-                // da li je cekirano = dostupni
-                // nije cekirano, svi
-                // NAPOMENA: proveriti da li se sortiraju SVI ili SAMO DOSTUPNI PROIZVODI
-                // checkbox -> dostupni
-                var combo = $("#sort").val().toString();
-                var primenjeno = $("#dostupni").is(":checked") ? "1;" : "0;";
-                primenjeno += combo;
- 
-                // poziv ka apiju za prikaz po filteru
-                $.ajax({
-                    url: "/api/products/ListaFiltriranihProizvoda",
-                    type: "POST",
-                    data: JSON.stringify({
-                        Id: primenjeno
-                    }),
-                    async: false,
-                    cache: false,
-                    dataType: "json",
-                    contentType: "application/json; charset=utf-8",
-                    success: function (response) {
-                        var data = JSON.parse(response);
-
-                        if (data.length > 0) {
-                            $(function () {
-                                // popuni tabelu
-                                $.each(data, function (key, k) {
-                                    // dodavanje reda po red
-                                    $("#proizvodi > tbody").append('<tr><td class="align-middle">' + k.Naziv + '</td>' +
-                                        '<td><img alt="proizvod" width="80" height="80" src="/Uploads/' + k.Slika + '" /></td>' +
-                                        '<td class="align-middle">' + k.Kolicina + '</td>' +
-                                        '<td class="align-middle">' + k.Cena + '&nbsp;RSD</td>' +
-                                        '<td class="align-middle">' + k.Opis.substring(0, 20) + '</td>' +
-                                        '<td class="align-middle">' + new Date(k.DatumPostavljanjaProizvoda).toLocaleDateString("en-GB") + '</td>' +
-                                        '<td class="align-middle">' + k.Grad.substring(0, 20) + '</td>' +
-                                        '<td class="align-middle"><b>' + (k.Status ? "NA&nbsp;STANJU" : "NEDOSTUPAN") + '</b></td>' +
-                                        '<td class="align-middle"><div class="align-middle justify-content-center">' +
-                                        '&emsp;<a class="btn btn-dark" href="IzmenaProizvoda.html?id=' + k.Id + '">Izmena</a>&emsp;' +
-                                        '<a class="btn btn-danger" href="BrisanjeProizvoda.html?id=' + k.Id + '">Brisanje</a></div></td>' +
-                                        '</tr>');
-                                });
-                            });
-
-                            var kriterijum = $("#sort").find(":selected").text().toLowerCase();
-                            // desila se greska - prikazi je
-                            $("#divgreske").removeClass('d-none');
-                            $("#greske").text("Prikazani su svi " + ($("#dostupni").is(":checked") ? "dostupni" : "") + " proizvodi sortirani koristeći kriterijum " + kriterijum + ".");
-                            return false;
-                        }
-                        else {
-                            // desila se greska - prikazi je
-                            $("#divgreske").removeClass('d-none');
-                            $("#greske").text("Nema proizvoda koji ispunjavaju uneti kriterijum!");
-                            return false;
-                        }
-                    }
-                });
-
-                return false; // prevent ajax page reload
-            });
-        });
-    </script>
+    <script src="Scripts/api/auth/auth-base.js"></script>
+    <script src="Scripts/api/products/products-favourite-by-user.js"></script>
+    <script src="Scripts/loader-finisher.js"></script>
 </head>
-<body>
-    <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark">
-        <div class="container">
-            <a href="/" class="navbar-brand">Shopy</a>
-            <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" title="Toggle navigation" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse d-sm-inline-flex justify-content-between">
-                <ul class="navbar-nav flex-grow-1">
-                    <li><a href="/" class="nav-link">Početna stranica</a></li>
-                    <li id="pl">
-                        <a href="Registracija.html" type="submit" id="registracija" class="btn btn-outline-light navbar-btn login-btn">Registracija</a>
-                        <a href="Prijava.html" type="submit" id="prijava" class="btn btn-outline-light navbar-btn register-btn">Prijava</a>
-                    </li>
-                    <li id="profil">
-                        <div class="btn-group profil-btn">
-                            <button type="button" class="btn btn-outline-light dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-                                <span id="poruka"></span>
-                            </button>
-                            <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="MojProfil.html" id="mojprofil">Moj profil</a></li>
-                                <li><a class="dropdown-item" href="IzmenaLozinke.html" id="izmenalozinke">Izmena lozinke</a></li>
-                                <li>
-                                    <hr class="dropdown-divider">
-                                </li>
-                                <li><a class="dropdown-item text-danger" id="odjava" href="#">Odjava sa platforme</a></li>
-                            </ul>
-                        </div>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
+<body class="d-none bsp">
+    <div id="nm"></div>
     <div class="container body-content mt-4 mb-5">
         <main>
             <div class="container">
